[package]
name = "museum-assassin"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
macroquad = { path = "../macroquad", features = [ "audio" ] }
paste = "1.0.15"
png = "0.17.14"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
miniquad = { version = "=0.4.6" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
sapp-jsutils = { version = "0.1" }
